# C-Light-IDE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resource.qrc
resource/: sideToolWidget_1.qss  sideToolWidget_2.qss
src/: CMakeLists.txt  main.cpp
src/GUI/: mainwindow.cpp  mainwindow.h
src/GUI/codePage/: codeFileListWidget.cpp  codeFileListWidget.h  codePageEditWidget.cpp  codePageEditWidget.h  codeTreeSideWidget.cpp  codeTreeSideWidget.h  codeTreeSideWidget.ui
src/GUI/commonWidget/: codeEditor.cpp  codeEditor.h  createProjectDialog.cpp  createProjectDialog.h  createProjectDialog.ui  editorSideArea.cpp  editorSideArea.h  terminalWidget.h
src/GUI/generatePage/: debugConfigWidget.cpp  debugConfigWidget.h  debugConfigWidget.ui  generatePageWidget.cpp  generatePageWidget.h  generatePageWidget.ui  generateSideMenu.cpp  generateSideMenu.h  generateSideMenu.ui  makeConfigWidget.cpp  makeConfigWidget.h  makeConfigWidget.ui
src/GUI/infoWindow/: makeInfoWidget.cpp  makeInfoWidget.h  makeInfoWidget.txt  makeInfoWidget.ui
src/GUI/page/codePage/: codeFileListWidget.cpp  codeFileListWidget.h  codeFileListWidget.ui  codePage.cpp  codePage.h  codePageEditWidget.cpp  codePageEditWidget.h  codePageEditWidget.ui  codeTreeSideWidget.cpp  codeTreeSideWidget.h  codeTreeSideWidget.ui
src/GUI/page/configPage/: buildConfigerForm.cpp  buildConfigerForm.h  buildConfigerForm.ui  configerPage.cpp  configerPage.h  debugConfigWidget.cpp  debugConfigWidget.h  debugConfigWidget.ui  genBuildConfigWidget.cpp  genBuildConfigWidget.h  projectConfigSideMenu.cpp  projectConfigSideMenu.h  projectConfigWidget.cpp  projectConfigWidget.h
src/GUI/page/startPage/: historyItemForm.cpp  historyItemForm.h  historyItemForm.ui  historyListWidget.cpp  historyListWidget.h  startPageWidget.cpp  startPageWidget.h  startPageWidget.ui
src/GUI/projectConfigPage/: debugConfigWidget.cpp  debugConfigWidget.h  genBuildConfigWidget.cpp  genBuildConfigWidget.h  genBuildConfigWidget.ui  projectConfigSideMenu.cpp  projectConfigSideMenu.h  projectConfigSideMenu.ui  projectConfigWidget.cpp  projectConfigWidget.h  projectConfigWidget.ui
src/GUI/sideMenu/: sideMenuDownWidget.cpp  sideMenuDownWidget.h  sideMenuDownWidget.ui  sideMenuWidget.cpp  sideMenuWidget.h  sideMenuWidget.qss  sideMenuWidget.ui
src/GUI/startPage/: startPageWidget.cpp  startPageWidget.h  startPageWidget.ui
src/GUI/statusBar/: statusBarWidget.cpp  statusBarWidget.h  statusBarWidget.ui
src/GUI/window/actionWindow/: createFileDialog.cpp  createFileDialog.h  createFileDialog.ui  createProjectDialog.cpp  createProjectDialog.h  createProjectDialog.ui
src/GUI/window/infoWindow/: makeInfoWidget.cpp  makeInfoWidget.ui  terminalWidget.cpp
src/GUI/window/mainWindow/: mainwindow.cpp  mainwindow.h
src/GUI/window/mainWindow/sideMenu/: sideMenuWidget.cpp  sideMenuWidget.h  sideMenuWidget.ui
src/codeFileSys/: codeFileSys.cpp  codeFileSys.h
src/common/: blockingQueue.h  forceAccess.h  global_data.cpp  global_data.h  projectConfig.cpp  projectConfig.h  usefulTool.cpp  usefulTool.h
src/externProcesses/: cmakeProcess.cpp  cmakeProcess.h  debuggerProcess.cpp  debuggerProcess.h  externProcessThread.cpp  externProcessThread.h  makeProcess.cpp  makeProcess.h
src/file/: editCodeManager.cpp  editCodeManager.h
src/model/: historyProjectListModel.cpp  historyProjectListModel.h  modelDataDef.cpp  modelDataDef.h
src/project/: project.cpp  project.h  projectManager.cpp  projectManager.h
src/system/: codeFileSys.cpp  projectConfig.h  projectSys.cpp  projectSys.h
src/terminalSys/: terminalSysteam.cpp  terminalSysteam.h  terminalThread.cpp  terminalThread.h
src/third/: TreeMenu.cpp  TreeMenu.h  TreeMenu.qss  newBuildfolder.cpp  newBuildfolder.h  newBulidFile.cpp  newBulidFile.h
src/third/QCodeEditor/: README.md
src/third/QCodeEditor/include/internal/: QPythonHighlighter.hpp
src/third/QCodeEditor/src/internal/: QCXXHighlighter.cpp  QCodeEditor.cpp  QFramedTextAttribute.cpp  QGLSLCompleter.cpp  QGLSLHighlighter.cpp  QJSONHighlighter.cpp  QLanguage.cpp  QLineNumberArea.cpp  QLuaCompleter.cpp  QLuaHighlighter.cpp  QPythonCompleter.cpp  QPythonHighlighter.cpp  QStyleSyntaxHighlighter.cpp  QSyntaxStyle.cpp  QXMLHighlighter.cpp
